apps/kratos/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kratos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kratos
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/part-of
                      operator: NotIn
                      values:
                        - nishir-security
                topologyKey: kubernetes.io/hostname
      containers:
        - name: kratos
          image: kratos
          args:
            - serve
            - all
            - --config
            - /config/kratos.yaml
          ports:
            - containerPort: 4433
              name: http
            - containerPort: 4434
              name: http-admin
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http-admin
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /health/alive
              port: http-admin
            initialDelaySeconds: 60
          startupProbe:
            httpGet:
              path: /health/ready
              port: http-admin
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: kratos
        - name: data
          persistentVolumeClaim:
            claimName: kratos-data
