apps/kratos/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos
spec:
  ports:
    - name: http
      port: 4433
      targetPort: http
    - name: http-admin
      port: 4434
      targetPort: http-admin
  selector:
    app.kubernetes.io/name: kratos
---
apiVersion: v1
kind: Service
metadata:
  name: kratos-postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    app.kubernetes.io/name: kratos-postgres
