apps/kratos/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos
spec:
  defaultBackend:
    service:
      name: kratos
      port:
        name: http-admin
