apps/kratos/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: accounts
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: accounts
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kratos
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kratos
  policyTypes:
    - Ingress
